2003-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use mkdir_p. Remove dirs from PRE/TMPINSTALL_FILES.

2003-12-03	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Add preinstallation dirstamp support.

2003-12-03	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Merge-in comm/Makefile.am, irq/Makefile.am
	* comm/Makefile.am: Remove.
	* irq/Makefile.am: Remove.

2003-09-04	Joel Sherrill <joel@OARcorp.com>

	* comm/console.c, comm/uart.c, comm/uart.h, irq/irq_asm.S,
	irq/irq_init.c: URL for license changed.

2003-08-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved automake/.
	* comm/Makefile.am: Reflect having moved automake/.
	* irq/Makefile.am: Reflect having moved automake/.

2002-11-13	Jay Monkman <jtm@smoothsmoothie.com>

	* irq/irq_asm.S, irq/irq_init.c: Fixes a bug with handling the
	situation where we are processing an IRQ, and we receive an FIQ.

2002-10-04	Jay Monkman <jtm@smoothsmoothie.com>

	* irq/irq_asm.S: Add FIQ support.

2002-07-30	Jay Monkman <jtm@smoothsmoothie.com>

	* irq/irq_asm.S: ARM port works well enough to run all sptests,
	tmtests, and ttcp.  In addition to general cleanup, there
	has been considerable optimization to interrupt disable/enable,
	endian swapping, and context switching.

2002-07-17	Jay Monkman <jtm@smoothsmoothie.com>

	* irq/irq_asm.S: Significant rework in attempt to make interrupts
	work.  They appear to be very close to correct but not 100%.

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* comm/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* Makefile.am: Remove AUTOMAKE_OPTIONS.
	* irq/Makefile.am: Remove AUTOMAKE_OPTIONS.

2002-01-03	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* comm/console.c: Include rtems/bspIo.h instead of bspIo.h.
	* irq/irq_init.c: Include rtems/bspIo.h instead of bspIo.h.

2001-09-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* comm/Makefile.am: Use 'PREINSTALL_FILES ='.

2001-05-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
